# aumos-event-bus

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: api-reference.md  architecture.md  index.md  quickstart.md  troubleshooting.md
docs/docs/guides/: consumer-groups.md  geo-replication.md  stream-processing.md
src/aumos_event_bus/: __init__.py  main.py  settings.py
src/aumos_event_bus/adapters/: consumer_group_manager.py  dlq_handler.py  event_versioner.py  flink_client.py  kafka.py  kafka_admin.py  kafka_connect_client.py  ksqldb_client.py  monitoring_dashboard.py  repositories.py  schema_registry.py  strimzi_client.py
src/aumos_event_bus/api/: router.py  schemas.py
src/aumos_event_bus/core/: business_outcome_event.py  interfaces.py  metering_topics.py  models.py  services.py  tenant_partitioner.py
